Changed the `StateEvolver` type parameter order from `StateEvolver<STATE, EVENT>`to `StateEvolver<EVENT, STATE>`