@@ -212,8 +212,8 @@ class DeciderTest {
     }
 
     // -------------------------- State --------------------------
-    public interface GuessingGameState extends Handler<GuessingGameCommand, GuessingGameEvent, GuessingGameError, GuessingGameState>, StateEvolver<GuessingGameState, GuessingGameEvent> {
-        class NotStartedGame implements GuessingGameState {
+    public interface GuessingGameState extends Handler<GuessingGameCommand, GuessingGameEvent, GuessingGameError, GuessingGameState>, StateEvolver<GuessingGameEvent, GuessingGameState> {
+        class GameNotStartedState implements GuessingGameState {
             @Override
             public HandlerResult<GuessingGameError, GuessingGameEvent> handle(GuessingGameCommand cmd, GuessingGameState game) {
                 if (cmd instanceof GuessingGameCommand.JoinGame) {
@@ -230,7 +230,7 @@ class DeciderTest {
             public GuessingGameState applyEvent(GuessingGameEvent gameEvent, GuessingGameState game) {
                 if (gameEvent instanceof GuessingGameEvent.GameStarted) {
                     var gameStarted = (GuessingGameEvent.GameStarted) gameEvent;
-                    return new StartedGameState(gameStarted.secret,
+                    return new GameStartedState(gameStarted.secret,
                                                 gameStarted.allowedDigits,
                                                 gameStarted.maxAttempts);
                 }
@@ -339,15 +339,7 @@ class DeciderTest {
             }
         }
 
-        class GameLostState implements GuessingGameState {
-            public final Secret secret;
-            public final int    maxAttempts;
-
-            public GameLostState(Secret secret, int maxAttempts) {
-                this.secret = secret;
-                this.maxAttempts = maxAttempts;
-            }
-
+        record GameLostState(Secret secret, int maxAttempts) implements GuessingGameState {
             @Override
             public HandlerResult<GuessingGameError, GuessingGameEvent> handle(GuessingGameCommand cmd, GuessingGameState game) {
                 return error(new GuessingGameError.GameFinishedError.GameAlreadyLost(cmd.gameId()));
@@ -361,447 +353,84 @@ class DeciderTest {
     }
 
     // -------------------------- Commands --------------------------
-    public interface GuessingGameCommand {
+    public sealed interface GuessingGameCommand {
         GuessingGameId gameId();
 
-        final class JoinGame implements GuessingGameCommand {
-            public final GuessingGameId gameId;
-            public final Secret         secret;
-            public final int            maxAttempts;
-            public final Set<Digit>     allowedDigits;
+        record JoinGame(GuessingGameId gameId,
+                        Secret secret,
+                        int maxAttempts,
+                        Set<Digit> allowedDigits) implements GuessingGameCommand {
 
-            public JoinGame(GuessingGameId gameId,
-                            Secret secret,
-                            int maxAttempts,
-                            Set<Digit> allowedDigits) {
-                this.gameId = requireNonNull(gameId, "No gameId provided");
-                this.secret = requireNonNull(secret, "No secret provided");
-                this.maxAttempts = maxAttempts;
+            public JoinGame {
+                requireNonNull(gameId, "No gameId provided");
+                requireNonNull(secret, "No secret provided");
                 requireTrue(maxAttempts > 0, "You must specify > 0 maxAttempts");
-                this.allowedDigits = requireNonEmpty(allowedDigits, "No allowedDigits provided");
-            }
-
-            @Override
-            public GuessingGameId gameId() {
-                return gameId;
-            }
-
-            @Override
-            public boolean equals(Object o) {
-                if (this == o) return true;
-                if (!(o instanceof JoinGame)) return false;
-                JoinGame joinGame = (JoinGame) o;
-                return maxAttempts == joinGame.maxAttempts && Objects.equals(gameId, joinGame.gameId) && Objects.equals(secret, joinGame.secret) && Objects.equals(allowedDigits, joinGame.allowedDigits);
-            }
-
-            @Override
-            public int hashCode() {
-                return Objects.hash(gameId, secret, maxAttempts, allowedDigits);
-            }
-
-            @Override
-            public String toString() {
-                return "JoinGame{" +
-                        "gameId=" + gameId +
-                        ", secret=" + secret +
-                        ", maxAttempts=" + maxAttempts +
-                        ", allowedDigits=" + allowedDigits +
-                        '}';
+                requireNonEmpty(allowedDigits, "No allowedDigits provided");
             }
         }
 
-        final class MakeGuess implements GuessingGameCommand {
-            public final GuessingGameId gameId;
-            public final Guess          guess;
+        record MakeGuess(GuessingGameId gameId,
+                         Guess guess) implements GuessingGameCommand {
 
-            public MakeGuess(GuessingGameId gameId,
-                             Guess guess) {
-                this.gameId = requireNonNull(gameId, "No gameId provided");
-                this.guess = requireNonNull(guess, "No guess provided");
-            }
-
-            @Override
-            public GuessingGameId gameId() {
-                return gameId;
-            }
-
-
-            public Guess guess() {
-                return guess;
-            }
-
-            @Override
-            public boolean equals(Object o) {
-                if (this == o) return true;
-                if (!(o instanceof MakeGuess)) return false;
-                MakeGuess makeGuess = (MakeGuess) o;
-                return Objects.equals(gameId, makeGuess.gameId) && Objects.equals(guess, makeGuess.guess);
-            }
-
-            @Override
-            public int hashCode() {
-                return Objects.hash(gameId, guess);
-            }
-
-            @Override
-            public String toString() {
-                return "MakeGuess{" +
-                        "gameId=" + gameId +
-                        ", guess=" + guess +
-                        '}';
+            public MakeGuess {
+                requireNonNull(gameId, "No gameId provided");
+                requireNonNull(guess, "No guess provided");
             }
         }
     }
 
     // -------------------------- Events --------------------------
-    public interface GuessingGameEvent {
+    public sealed interface GuessingGameEvent {
         GuessingGameId gameId();
 
-        final class GameStarted implements GuessingGameEvent {
-            public final GuessingGameId gameId;
-            public final Secret         secret;
-            public final int            maxAttempts;
-            public final Set<Digit>     allowedDigits;
-
-            public GameStarted(GuessingGameId gameId,
-                               Secret secret,
-                               int maxAttempts,
-                               Set<Digit> allowedDigits) {
-
-                this.gameId = gameId;
-                this.secret = secret;
-                this.maxAttempts = maxAttempts;
-                this.allowedDigits = allowedDigits;
-            }
-
-            @Override
-            public GuessingGameId gameId() {
-                return gameId;
-            }
-
-            @Override
-            public boolean equals(Object o) {
-                if (this == o) return true;
-                if (!(o instanceof GameStarted)) return false;
-                GameStarted that = (GameStarted) o;
-                return maxAttempts == that.maxAttempts && Objects.equals(gameId, that.gameId) && Objects.equals(secret, that.secret) && Objects.equals(allowedDigits, that.allowedDigits);
-            }
-
-            @Override
-            public int hashCode() {
-                return Objects.hash(gameId, secret, maxAttempts, allowedDigits);
-            }
-
-            @Override
-            public String toString() {
-                return "GameStarted{" +
-                        "gameId=" + gameId +
-                        ", secret=" + secret +
-                        ", maxAttempts=" + maxAttempts +
-                        ", allowedDigits=" + allowedDigits +
-                        '}';
-            }
+        record GameStarted(GuessingGameId gameId,
+                           Secret secret,
+                           int maxAttempts,
+                           Set<Digit> allowedDigits) implements GuessingGameEvent {
         }
 
-        final class GuessMade implements GuessingGameEvent {
-            public final GuessingGameId gameId;
-            public final Guess          guess;
-            public final int            attempt;
-
-            public GuessMade(GuessingGameId gameId,
-                             Guess guess,
-                             int attempt) {
-                this.gameId = gameId;
-                this.guess = guess;
-                this.attempt = attempt;
-            }
-
-            @Override
-            public GuessingGameId gameId() {
-                return gameId;
-            }
-
-            @Override
-            public boolean equals(Object o) {
-                if (this == o) return true;
-                if (!(o instanceof GuessMade)) return false;
-                GuessMade guessMade = (GuessMade) o;
-                return attempt == guessMade.attempt && Objects.equals(gameId, guessMade.gameId) && Objects.equals(guess, guessMade.guess);
-            }
-
-            @Override
-            public int hashCode() {
-                return Objects.hash(gameId, guess, attempt);
-            }
-
-            @Override
-            public String toString() {
-                return "GuessMade{" +
-                        "gameId=" + gameId +
-                        ", guess=" + guess +
-                        ", attempt=" + attempt +
-                        '}';
-            }
+        record GuessMade(GuessingGameId gameId,
+                         Guess guess,
+                         int attempt) implements GuessingGameEvent {
         }
 
-        final class GameWon implements GuessingGameEvent {
-            public final GuessingGameId gameId;
-            public final int            numberOfAttempts;
-
-            public GameWon(GuessingGameId gameId, int numberOfAttempts) {
-                this.gameId = gameId;
-                this.numberOfAttempts = numberOfAttempts;
-            }
-
-            @Override
-            public GuessingGameId gameId() {
-                return gameId;
-            }
-
-            @Override
-            public boolean equals(Object o) {
-                if (this == o) return true;
-                if (!(o instanceof GameWon)) return false;
-                GameWon gameWon = (GameWon) o;
-                return numberOfAttempts == gameWon.numberOfAttempts && Objects.equals(gameId, gameWon.gameId);
-            }
-
-            @Override
-            public int hashCode() {
-                return Objects.hash(gameId, numberOfAttempts);
-            }
-
-            @Override
-            public String toString() {
-                return "GameWon{" +
-                        "gameId=" + gameId +
-                        ", numberOfAttempts=" + numberOfAttempts +
-                        '}';
-            }
+        record GameWon(GuessingGameId gameId, int numberOfAttempts) implements GuessingGameEvent {
         }
 
-        final class GameLost implements GuessingGameEvent {
-            public final GuessingGameId gameId;
-            public final int            maxAttempts;
-
-            public GameLost(GuessingGameId gameId, int maxAttempts) {
-                this.gameId = gameId;
-                this.maxAttempts = maxAttempts;
-            }
-
-            @Override
-            public GuessingGameId gameId() {
-                return gameId;
-            }
+        record GameLost(GuessingGameId gameId, int maxAttempts) implements GuessingGameEvent {
         }
 
     }
 
     // -------------------------- Errors --------------------------
-    public interface GuessingGameError {
+    public sealed interface GuessingGameError {
         GuessingGameId gameId();
 
-        interface GameFinishedError extends GuessingGameError {
-            final class GameAlreadyWon implements GameFinishedError {
-                public final GuessingGameId gameId;
-
-                public GameAlreadyWon(GuessingGameId gameId) {
-                    this.gameId = gameId;
-                }
-
-                @Override
-                public GuessingGameId gameId() {
-                    return gameId;
-                }
-
-                @Override
-                public boolean equals(Object o) {
-                    if (this == o) return true;
-                    if (!(o instanceof GameAlreadyWon)) return false;
-                    GameAlreadyWon that = (GameAlreadyWon) o;
-                    return Objects.equals(gameId, that.gameId);
-                }
-
-                @Override
-                public int hashCode() {
-                    return Objects.hash(gameId);
-                }
-
-                @Override
-                public String toString() {
-                    return "GameAlreadyWon{" +
-                            "gameId=" + gameId +
-                            '}';
-                }
+        sealed interface GameFinishedError extends GuessingGameError {
+            record GameAlreadyWon(GuessingGameId gameId) implements GameFinishedError {
             }
 
-            final class GameAlreadyLost implements GameFinishedError {
-                public final GuessingGameId gameId;
-
-                public GameAlreadyLost(GuessingGameId gameId) {
-                    this.gameId = gameId;
-                }
-
-                @Override
-                public GuessingGameId gameId() {
-                    return gameId;
-                }
-
-                @Override
-                public boolean equals(Object o) {
-                    if (this == o) return true;
-                    if (!(o instanceof GameAlreadyLost)) return false;
-                    GameAlreadyLost that = (GameAlreadyLost) o;
-                    return Objects.equals(gameId, that.gameId);
-                }
-
-                @Override
-                public int hashCode() {
-                    return Objects.hash(gameId);
-                }
-
-                @Override
-                public String toString() {
-                    return "GameAlreadyLost{" +
-                            "gameId=" + gameId +
-                            '}';
-                }
+            record GameAlreadyLost(GuessingGameId gameId) implements GameFinishedError {
             }
         }
 
-        interface GuessError extends GuessingGameError {
-            final class GameNotStarted implements GuessError {
-                public final GuessingGameId gameId;
-
-                public GameNotStarted(GuessingGameId gameId) {
-                    this.gameId = gameId;
-                }
-
-                @Override
-                public GuessingGameId gameId() {
-                    return gameId;
-                }
-
-                @Override
-                public boolean equals(Object o) {
-                    if (this == o) return true;
-                    if (!(o instanceof GameNotStarted)) return false;
-                    GameNotStarted that = (GameNotStarted) o;
-                    return Objects.equals(gameId, that.gameId);
-                }
-
-                @Override
-                public int hashCode() {
-                    return Objects.hash(gameId);
-                }
-
-                @Override
-                public String toString() {
-                    return "GameNotStarted{" +
-                            "gameId=" + gameId +
-                            '}';
-                }
+        sealed interface GuessError extends GuessingGameError {
+            record GameNotStarted(GuessingGameId gameId) implements GuessError {
             }
 
-            final class GuessTooShort implements GuessError {
-                public final GuessingGameId gameId;
-                public final Guess          guess;
-                public final int            requiredLength;
-
-                public GuessTooShort(GuessingGameId gameId,
-                                     Guess guess,
-                                     int requiredLength) {
-                    this.gameId = gameId;
-                    this.guess = guess;
-                    this.requiredLength = requiredLength;
-                }
-
-                @Override
-                public GuessingGameId gameId() {
-                    return gameId;
-                }
-
-                @Override
-                public boolean equals(Object o) {
-                    if (this == o) return true;
-                    if (!(o instanceof GuessTooShort)) return false;
-                    GuessTooShort that = (GuessTooShort) o;
-                    return requiredLength == that.requiredLength && Objects.equals(gameId, that.gameId) && Objects.equals(guess, that.guess);
-                }
-
-                @Override
-                public int hashCode() {
-                    return Objects.hash(gameId, guess, requiredLength);
-                }
-
-                @Override
-                public String toString() {
-                    return "GuessTooShort{" +
-                            "gameId=" + gameId +
-                            ", guess=" + guess +
-                            ", requiredLength=" + requiredLength +
-                            '}';
-                }
+            record GuessTooShort(GuessingGameId gameId,
+                                 Guess guess,
+                                 int requiredLength) implements GuessError {
             }
 
-            final class GuessTooLong implements GuessError {
-                public final GuessingGameId gameId;
-                public final Guess          guess;
-                public final int            requiredLength;
-
-                public GuessTooLong(GuessingGameId gameId,
-                                    Guess guess,
-                                    int requiredLength) {
-                    this.gameId = gameId;
-                    this.guess = guess;
-                    this.requiredLength = requiredLength;
-                }
-
-                @Override
-                public GuessingGameId gameId() {
-                    return gameId;
-                }
-
-                @Override
-                public boolean equals(Object o) {
-                    if (this == o) return true;
-                    if (!(o instanceof GuessTooLong)) return false;
-                    GuessTooLong that = (GuessTooLong) o;
-                    return requiredLength == that.requiredLength && Objects.equals(gameId, that.gameId) && Objects.equals(guess, that.guess);
-                }
-
-                @Override
-                public int hashCode() {
-                    return Objects.hash(gameId, guess, requiredLength);
-                }
-
-                @Override
-                public String toString() {
-                    return "GuessTooLong{" +
-                            "gameId=" + gameId +
-                            ", guess=" + guess +
-                            ", requiredLength=" + requiredLength +
-                            '}';
-                }
+            record GuessTooLong(GuessingGameId gameId,
+                                Guess guess,
+                                int requiredLength) implements GuessError {
             }
 
-            final class InvalidDigitInGuess implements GuessError {
-                public final GuessingGameId gameId;
-                public final Guess          guess;
-                public final Set<Digit>     allowedDigits;
-
-                public InvalidDigitInGuess(GuessingGameId gameId,
-                                           Guess guess,
-                                           Set<Digit> allowedDigits) {
-                    this.gameId = gameId;
-                    this.guess = guess;
-                    this.allowedDigits = allowedDigits;
-                }
-
-                @Override
-                public GuessingGameId gameId() {
-                    return gameId;
-                }
+            record InvalidDigitInGuess(GuessingGameId gameId,
+                                       Guess guess,
+                                       Set<Digit> allowedDigits) implements GuessError {
             }
         }
     }
@@ -822,16 +451,13 @@ class DeciderTest {
         }
     }
 
-    public static class Guess {
-        private final List<Digit> digits;
-
-        public Guess(List<Digit> digits) {
-            this.digits = digits;
+    public record Guess(List<Digit> digits) {
+        public Guess {
             requireNonEmpty(digits, "No digits provided");
         }
 
         public Guess(int... digits) {
-            this(Arrays.stream(digits).mapToObj(Digit::of).collect(Collectors.toList()));
+            this(Arrays.stream(digits).mapToObj(Digit::of).toList());
         }
 
         public Guess(Digit... digits) {
@@ -841,22 +467,15 @@ class DeciderTest {
         public int length() {
             return digits.size();
         }
-
-        public List<Digit> digits() {
-            return digits;
-        }
     }
 
-    public static class Secret {
-        private final List<Digit> digits;
-
-        public Secret(List<Digit> digits) {
-            this.digits = digits;
+    public record Secret(List<Digit> digits) {
+        public Secret {
             requireNonEmpty(digits, "No digits provided");
         }
 
         public Secret(int... digits) {
-            this(Arrays.stream(digits).mapToObj(Digit::of).collect(Collectors.toList()));
+            this(Arrays.stream(digits).mapToObj(Digit::of).toList());
         }
 
         public Secret(Digit... digits) {
@@ -869,10 +488,6 @@ class DeciderTest {
 
         public Guess toGuess() {
             return new Guess(digits);
-        }
-
-        public List<Digit> digits() {
-            return digits;
         }
     }
 
@@ -887,26 +502,9 @@ class DeciderTest {
         }
     }
 
-    public static class DigitPair {
-        private final Digit secret;
-        private final Digit guess;
-
-        public DigitPair(Digit secret, Digit guess) {
-
-            this.secret = secret;
-            this.guess = guess;
-        }
-
+    public record DigitPair(Digit secret, Digit guess) {
         boolean matches() {
             return secret.equals(guess);
-        }
-
-        public Digit secret() {
-            return secret;
-        }
-
-        public Digit guess() {
-            return guess;
         }
     }
 }
